--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "mindfulness",
   "version": "0.1.0",
+  "homepage": "https://uf-ai-mindfulness.github.io",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
